[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Spaceship.pxo" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Enemy/EnemyShip.pxo" type="Texture" id=4]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=5]
[ext_resource path="res://Energy Shield/EnergyShield.tscn" type="PackedScene" id=6]
[ext_resource path="res://Space_Stars2.png" type="Texture" id=8]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 90.0
margin_bottom = 160.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="."]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PoolVector2Array( -5.10584, 1.46484, -5.10584, 2.8153, -3.93076, 3.65715, 3.94401, 3.7273, 5.1717, 2.56976, 5.04894, 1.37715, 0.0504713, -3.58624 )

[node name="EnergyShield" parent="Player" instance=ExtResource( 6 )]

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 47.7169, 18.2841 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Enemy"]
texture = ExtResource( 4 )

[node name="Canons" type="Node2D" parent="Enemy"]

[node name="LeftCanon" type="Position2D" parent="Enemy/Canons"]
position = Vector2( -4.5, 3 )

[node name="RightCanon" type="Position2D" parent="Enemy/Canons"]
position = Vector2( 4.5, 3 )

[node name="Timer" type="Timer" parent="Enemy"]
autostart = true
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
